// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReEnableMultipleSubscriptions message rendering works 1`] = `
Object {
  "color": "#24292f",
  "mrkdwn_in": Array [
    "text",
  ],
  "text": "Subscriptions to 4 repositories and 3 accounts have been disabled because <@U12345>, who originally set them up, has disconnected their GitHub account.
Use the following slash commands to re-enable the subscriptions:
/github subscribe kubernetes/kubernetes
/github subscribe facebook/react
/github subscribe django/django
/github subscribe microsoft/typescript
/github subscribe kubernetes
/github subscribe django
/github subscribe microsoft",
}
`;

exports[`ReEnableMultipleSubscriptions message rendering works with empty account subscriptions 1`] = `
Object {
  "color": "#24292f",
  "mrkdwn_in": Array [
    "text",
  ],
  "text": "Subscriptions to 4 repositories have been disabled because <@U12345>, who originally set them up, has disconnected their GitHub account.
Use the following slash commands to re-enable the subscriptions:
/github subscribe kubernetes/kubernetes
/github subscribe facebook/react
/github subscribe django/django
/github subscribe microsoft/typescript",
}
`;

exports[`ReEnableMultipleSubscriptions message rendering works with empty repository subscriptions 1`] = `
Object {
  "color": "#24292f",
  "mrkdwn_in": Array [
    "text",
  ],
  "text": "Subscriptions to 3 accounts have been disabled because <@U12345>, who originally set them up, has disconnected their GitHub account.
Use the following slash commands to re-enable the subscriptions:
/github subscribe kubernetes
/github subscribe django
/github subscribe microsoft",
}
`;
